# dat600-VAC

./: .gitignore  LICENSE
assignment1/c_impl/: sortering.c
assignment1/dataset/large/: random_100000.txt  random_25000.txt  random_250000.txt  random_50000.txt  random_500000.txt  random_75000.txt
assignment1/dataset/medium/: random_10000.txt  random_100000.txt  random_2500.txt  random_5000.txt  random_7500.txt
assignment1/dataset/small/: random_10.txt  random_100.txt  random_1000.txt  random_25.txt  random_250.txt  random_500.txt  random_75.txt  random_750.txt
assignment1/plotting/: benchmark.py  benchmark_steps.py  file.py  list_generator.py  plotting.py
assignment1/python_impl/: heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  sortering.py
assignment1/results/: results.tsv  results_c.tsv  results_python.tsv  results_steps.tsv
assignment2/: CMakeLists.txt  fibonacci.c  fibonacci.h  main.c  set.c  setup.md  tests.c
assignment2/task1/: set.h
assignment2/task2/: disjoint_set.c  disjoint_set.h  main.c  tests.c
assignment2/task3/: fibonacci.c  fibonacci.h  fibonacci_python_plot.py  main.c  tests.c
assignment2/task3/rust_c_compare/: bench_fib_c.c  bench_fib_rs.rs  plot_fib.py  setup.md
assignment2/task3/rust_c_compare/assembly/: C-x86-64 clang 21.1.0-2.asm  Rust-rustc 1.93.0-2.asm
tests/: test_heapsort.py  test_insertionsort.py  test_mergesort.py  test_quicksort.py
